--- a/PyTorch_s8_task3.ipynb
+++ b/PyTorch_s8_task3.ipynb
@@ -66,7 +66,7 @@
         "        self.linear = nn.Linear(input_size, output_size)\n",
         "    \n",
         "    def forward(self, x):\n",
-        "        out = F.log_softmax(self.linear(x))\n",
+        "        out = F.log_softmax(self.linear(x)) # key step\n",
         "        return out"
       ],
       "execution_count": 0,
