使用 Colaboratory 创建

--- a/PyTorch_s8_task7.ipynb
+++ b/PyTorch_s8_task7.ipynb
@@ -65,17 +65,17 @@
       "metadata": {
         "id": "p8Ngd_JCEpIN",
         "colab_type": "code",
+        "outputId": "cc288ee6-9671-4363-abac-46ce32928f5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cc288ee6-9671-4363-abac-46ce32928f5a"
+        }
       },
       "source": [
         "# Hyper parameters\n",
         "EPOCH = 3\n",
-        "BATCH_SIZE = 32\n",
-        "LR = 0.001\n",
+        "BATCH_SIZE = 32 #@param [8, 16, 32, 64]\n",
+        "LR = 0.001 #@param {type:\"number\"}\n",
         "MNIST_ROOT = 'MNIST'\n",
         "DOWNLOAD_MNIST = False if MNIST_ROOT in os.listdir() else True\n",
         "TEST_SIZE = 2000\n",
@@ -83,7 +83,7 @@
         "device = torch.device('cuda')\n",
         "print(device, torch.cuda.get_device_name())"
       ],
-      "execution_count": 131,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,11 +140,11 @@
       "metadata": {
         "id": "aAkXFmwaMheG",
         "colab_type": "code",
+        "outputId": "6395cd0a-b974-42c5-8c21-7a520cf63a78",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "6395cd0a-b974-42c5-8c21-7a520cf63a78"
+        }
       },
       "source": [
         "class CNN(nn.Module):\n",
@@ -176,7 +176,7 @@
         "cnn.to(device)\n",
         "print(cnn)\n"
       ],
-      "execution_count": 134,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,11 +204,11 @@
       "metadata": {
         "id": "oQLAFpV9Q3I4",
         "colab_type": "code",
+        "outputId": "1ffaccc5-5f59-43db-fd85-05a329b3b1bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "1ffaccc5-5f59-43db-fd85-05a329b3b1bd"
+        }
       },
       "source": [
         "optimizer = torch.optim.Adam(cnn.parameters(), lr=LR)\n",
@@ -233,7 +233,7 @@
         "            accuracy = sum(pred_y_for_acc == test_y_for_acc) / test_y_for_acc.size\n",
         "            print('Epoch ', epoch, '| train loss : %.4f' % loss.item(), '| test accuracy', accuracy)"
       ],
-      "execution_count": 135,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
